All files considered as hardlinks when compressing remote files
Data are lost for all files except the first one as they are considered as hard links. This happens when compressing remote files which don't have inode, nlink and device number set. Those attributes are prerequisites for the archive_entry_linkify
function. More info on https://bugzilla.redhat.com/show_bug.cgi?id=1907334.
-
Call archive_entry_linkify
only if inode, nlink and device is set. -
Set attributes over archive_entry_set_...
only when they are available i.e.g_file_info_has_attribute (...)
. -
archive_entry_linkify
should be called in a loop in the end, not just once. (This is not related to this issue, but it relates toarchive_entry_linkify
handling.)